Add option to use a separate ssh key file

--- a/change_linux_academy_server_password.yml
+++ b/change_linux_academy_server_password.yml
@@ -15,9 +15,15 @@
     - name: suffix
       prompt: >-
         "Use alternate server name
-        (eg. username1b.mylabserver.com)? (y/N/yes/no)
+        (eg. username1b.mylabserver.com)? (y/n/yes/no)
         or add [ -e suffix=n ]"
       default: "no"
+      private: "no"
+
+    - name: default_key
+      prompt: >-
+        "Use your default ssh private/public key files? (y/n/yes/no)"
+      default: "yes"
       private: "no"
 
   vars:
@@ -29,10 +35,14 @@
         msg: Enter your Linux Academy Username! Add '-e user=lnx_acdmy_username'
       when: user == ""
 
-    - name: Set facts about hostname suffix
+    - name: Set facts about host
       set_fact:
         server_suffix:
           "{{ 'b' if (suffix|regex_search('(?i)^(y|true)')) else '' }}"
+        key_file:
+          "{{ lookup('env','HOME') + '/.ssh/id_rsa'
+              if (default_key|regex_search('(?i)^(y|true)'))
+              else 'id_rsa_la_servers' }}"
 
     - name: >-
         "Add Hosts {{ linux_academy_username }}[1-6]{{ server_suffix
@@ -42,12 +52,13 @@
           "{{ linux_academy_username + item + server_suffix }}.mylabserver.com"
         groups: all
         server_prefix: "{{ linux_academy_username + item }}"
+        key_file: "{{ key_file }}"
       with_sequence: start=1 end=6
 
 - hosts: "all"
   gather_facts: "no"
   vars:
-    ansible_ssh_extra_args: "-o PubkeyAuthentication=no"
+    ansible_ssh_extra_args: "-o PubkeyAuthentication=no -i {{ key_file }}"
 
   vars_prompt:
     - name: ssh_user
