fix key file lookup

--- a/change_linux_academy_server_password.yml
+++ b/change_linux_academy_server_password.yml
@@ -40,9 +40,9 @@
         server_suffix:
           "{{ 'b' if (suffix|regex_search('(?i)^(y|true)')) else '' }}"
         key_file:
-          "{{ lookup('env','HOME') + '/.ssh/id_rsa'
+          "{{ (lookup('env','HOME') + '/.ssh/id_rsa')
               if (default_key|regex_search('(?i)^(y|true)'))
-              else 'id_rsa_la_servers' }}"
+              else '{{ playbook_dir }}/id_rsa_la_servers' }}"
 
     - name: >-
         "Add Hosts {{ linux_academy_username }}[1-6]{{ server_suffix
